# data-spy

./: .flake8  LICENSE  README.md  pyproject.toml
src/data_spy/: column_data_test_sql.py  data_spy.py  schema_compare.py  snowflake_utils.py  table_compare.py
