[tool.poetry]
name = "data-spy"
version = "0.1.0"
description = ""
authors = ["Anthony Khoudary <ankhoudary12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
